// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders custom props 1`] = `
<input
  className="form__input"
  id="idTest"
  name="nameTest"
  onChange={[Function]}
  placeholder="placeholderTest"
  required="false"
  title=""
  type="text"
  value="ola test value"
/>
`;

exports[`Input renders defaultProps 1`] = `
<input
  className="form__input"
  id=""
  name=""
  onChange={[Function]}
  placeholder=""
  required="false"
  title=""
  type="text"
  value=""
/>
`;
